--- a/Experiments/Robustness_0223.ipynb
+++ b/Experiments/Robustness_0223.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "obvu1qAriQZx",
-        "outputId": "f835a8c3-fd1d-4d80-b7f3-2dce2367ce03"
+        "outputId": "764142bc-dd1e-4ccc-de26-3ea2fd6b0135"
       },
       "outputs": [
         {
@@ -73,53 +73,53 @@
             "\n",
             "[Instant noise sweep]\n",
             "  SNR= inf | Macro-F1=0.9671\n",
-            "  SNR=  30 | Macro-F1=0.9556\n",
-            "  SNR=  20 | Macro-F1=0.9095\n",
-            "  SNR=  10 | Macro-F1=0.7872\n",
-            "  SNR=   5 | Macro-F1=0.6517\n",
-            "  SNR=   0 | Macro-F1=0.5278\n",
+            "  SNR=  30 | Macro-F1=0.9592\n",
+            "  SNR=  20 | Macro-F1=0.9127\n",
+            "  SNR=  10 | Macro-F1=0.7936\n",
+            "  SNR=   5 | Macro-F1=0.6590\n",
+            "  SNR=   0 | Macro-F1=0.5322\n",
             "\n",
             "[LaTeX rows] Instant\n",
             "inf & 0.9671 \\\\\n",
-            "30 & 0.9556 \\\\\n",
-            "20 & 0.9095 \\\\\n",
-            "10 & 0.7872 \\\\\n",
-            "5 & 0.6517 \\\\\n",
-            "0 & 0.5278 \\\\\n",
+            "30 & 0.9592 \\\\\n",
+            "20 & 0.9127 \\\\\n",
+            "10 & 0.7936 \\\\\n",
+            "5 & 0.6590 \\\\\n",
+            "0 & 0.5322 \\\\\n",
             "\n",
             "[Linear SNR drift]\n",
-            "  SNR=30.0 | Macro-F1=0.9554\n",
-            "  SNR=26.7 | Macro-F1=0.9479\n",
-            "  SNR=23.3 | Macro-F1=0.9274\n",
-            "  SNR=20.0 | Macro-F1=0.9086\n",
-            "  SNR=16.7 | Macro-F1=0.8793\n",
-            "  SNR=13.3 | Macro-F1=0.8532\n",
-            "  SNR=10.0 | Macro-F1=0.7794\n",
-            "  SNR= 6.7 | Macro-F1=0.6938\n",
-            "  SNR= 3.3 | Macro-F1=0.6096\n",
-            "  SNR= 0.0 | Macro-F1=0.5267\n",
+            "  SNR=30.0 | Macro-F1=0.9592\n",
+            "  SNR=26.7 | Macro-F1=0.9505\n",
+            "  SNR=23.3 | Macro-F1=0.9286\n",
+            "  SNR=20.0 | Macro-F1=0.9127\n",
+            "  SNR=16.7 | Macro-F1=0.8937\n",
+            "  SNR=13.3 | Macro-F1=0.8576\n",
+            "  SNR=10.0 | Macro-F1=0.7936\n",
+            "  SNR= 6.7 | Macro-F1=0.6957\n",
+            "  SNR= 3.3 | Macro-F1=0.6201\n",
+            "  SNR= 0.0 | Macro-F1=0.5322\n",
             "\n",
             "[LaTeX rows] Linear\n",
-            "30.0 & 0.9554 \\\\\n",
-            "26.7 & 0.9479 \\\\\n",
-            "23.3 & 0.9274 \\\\\n",
-            "20.0 & 0.9086 \\\\\n",
-            "16.7 & 0.8793 \\\\\n",
-            "13.3 & 0.8532 \\\\\n",
-            "10.0 & 0.7794 \\\\\n",
-            "6.7 & 0.6938 \\\\\n",
-            "3.3 & 0.6096 \\\\\n",
-            "0.0 & 0.5267 \\\\\n",
+            "30.0 & 0.9592 \\\\\n",
+            "26.7 & 0.9505 \\\\\n",
+            "23.3 & 0.9286 \\\\\n",
+            "20.0 & 0.9127 \\\\\n",
+            "16.7 & 0.8937 \\\\\n",
+            "13.3 & 0.8576 \\\\\n",
+            "10.0 & 0.7936 \\\\\n",
+            "6.7 & 0.6957 \\\\\n",
+            "3.3 & 0.6201 \\\\\n",
+            "0.0 & 0.5322 \\\\\n",
             "\n",
             "[Bias drift]\n",
-            "  beta=0.05 | Macro-F1=0.9471\n",
-            "  beta=0.10 | Macro-F1=0.8870\n",
-            "  beta=0.20 | Macro-F1=0.7775\n",
+            "  beta=0.05 | Macro-F1=0.9492\n",
+            "  beta=0.10 | Macro-F1=0.8828\n",
+            "  beta=0.20 | Macro-F1=0.7580\n",
             "\n",
             "[LaTeX rows] Bias\n",
-            "0.05 & 0.9471 \\\\\n",
-            "0.10 & 0.8870 \\\\\n",
-            "0.20 & 0.7775 \\\\\n"
+            "0.05 & 0.9492 \\\\\n",
+            "0.10 & 0.8828 \\\\\n",
+            "0.20 & 0.7580 \\\\\n"
           ]
         }
       ],
@@ -456,7 +456,8 @@
         "        self.device = device\n",
         "\n",
         "    @torch.no_grad()\n",
-        "    def eval_once(self, snr_db=None, bias_beta=None, bias_mode=\"constant\", measure_gate=True):\n",
+        "    def eval_once(self, snr_db=None, bias_beta=None, eval_seed=None, bias_mode=\"constant\", measure_gate=True):\n",
+        "        set_seed(eval_seed)\n",
         "        self.model.eval()\n",
         "\n",
         "        all_preds, all_labels = [], []\n",
@@ -518,7 +519,7 @@
         "    def instant_noise_sweep(self, snr_list_db):\n",
         "        results = []\n",
         "        for snr in snr_list_db:\n",
-        "            out = self.eval_once(snr_db=snr, measure_gate=False)\n",
+        "            out = self.eval_once(snr_db=snr, measure_gate=False, eval_seed=42)\n",
         "            out[\"snr_db\"] = (\"inf\" if snr is None else snr)\n",
         "            results.append(out)\n",
         "        return results\n",
@@ -527,7 +528,7 @@
         "        snrs = np.linspace(snr_start, snr_end, steps).tolist()\n",
         "        time_series = []\n",
         "        for t, snr in enumerate(snrs):\n",
-        "            out = self.eval_once(snr_db=float(snr), measure_gate=False)\n",
+        "            out = self.eval_once(snr_db=float(snr), measure_gate=False, eval_seed=42)\n",
         "            time_series.append({\n",
         "                \"t\": t,\n",
         "                \"snr_db\": float(snr),\n",
@@ -540,7 +541,7 @@
         "    def bias_drift_sweep(self, beta_list, mode=\"constant\"):\n",
         "        results = []\n",
         "        for beta in beta_list:\n",
-        "            out = self.eval_once(bias_beta=beta, bias_mode=mode, measure_gate=False)\n",
+        "            out = self.eval_once(bias_beta=beta, bias_mode=mode, measure_gate=False, eval_seed=42)\n",
         "            out[\"bias_beta\"] = beta\n",
         "            out[\"bias_mode\"] = mode\n",
         "            results.append(out)\n",
@@ -1548,7 +1549,7 @@
         "id": "D96WjUotlaWb",
         "outputId": "c85dfffd-ea37-4296-b274-3fd2f493a2fa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2396,7 +2397,7 @@
         "id": "ebMu531Am4It",
         "outputId": "318e81f2-f8df-4900-9d06-616a70d7569b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3250,7 +3251,7 @@
         "id": "Iz0sqzbynP19",
         "outputId": "e62ac4f5-b982-48da-fce7-1b2dfeccdd36"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
