--- a/Experiments/Robustness_0223.ipynb
+++ b/Experiments/Robustness_0223.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "obvu1qAriQZx",
-        "outputId": "764142bc-dd1e-4ccc-de26-3ea2fd6b0135"
+        "outputId": "fcb9322a-ff36-4a56-c0fc-ae99e5d995ed"
       },
       "outputs": [
         {
@@ -44,82 +44,82 @@
             "\n",
             "Model params: 78,591\n",
             "\n",
-            "Epoch 05/100 | LR=0.0010 | Train Loss=0.1304 | TestF1=0.8834 | BestF1=0.9128 | Temp=4.982\n",
-            "Epoch 10/100 | LR=0.0010 | Train Loss=0.1088 | TestF1=0.9017 | BestF1=0.9182 | Temp=4.909\n",
-            "Epoch 15/100 | LR=0.0009 | Train Loss=0.0615 | TestF1=0.9339 | BestF1=0.9417 | Temp=4.782\n",
-            "Epoch 20/100 | LR=0.0009 | Train Loss=0.0301 | TestF1=0.9486 | BestF1=0.9486 | Temp=4.603\n",
-            "Epoch 25/100 | LR=0.0009 | Train Loss=0.0202 | TestF1=0.9448 | BestF1=0.9543 | Temp=4.378\n",
-            "Epoch 30/100 | LR=0.0008 | Train Loss=0.0159 | TestF1=0.9544 | BestF1=0.9544 | Temp=4.113\n",
-            "Epoch 35/100 | LR=0.0007 | Train Loss=0.0105 | TestF1=0.9514 | BestF1=0.9555 | Temp=3.813\n",
-            "Epoch 40/100 | LR=0.0007 | Train Loss=0.0058 | TestF1=0.9471 | BestF1=0.9555 | Temp=3.486\n",
-            "Epoch 45/100 | LR=0.0006 | Train Loss=0.0015 | TestF1=0.9588 | BestF1=0.9588 | Temp=3.141\n",
-            "Epoch 50/100 | LR=0.0005 | Train Loss=0.0041 | TestF1=0.9602 | BestF1=0.9605 | Temp=2.786\n",
-            "Epoch 55/100 | LR=0.0004 | Train Loss=0.0030 | TestF1=0.9599 | BestF1=0.9671 | Temp=2.430\n",
-            "Epoch 60/100 | LR=0.0004 | Train Loss=0.0003 | TestF1=0.9563 | BestF1=0.9671 | Temp=2.082\n",
-            "Epoch 65/100 | LR=0.0003 | Train Loss=0.0003 | TestF1=0.9536 | BestF1=0.9671 | Temp=1.751\n",
-            "Epoch 70/100 | LR=0.0002 | Train Loss=0.0014 | TestF1=0.9559 | BestF1=0.9671 | Temp=1.445\n",
-            "Epoch 75/100 | LR=0.0002 | Train Loss=0.0002 | TestF1=0.9590 | BestF1=0.9671 | Temp=1.172\n",
-            "Epoch 80/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9564 | BestF1=0.9671 | Temp=0.938\n",
-            "Epoch 85/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9563 | BestF1=0.9671 | Temp=0.750\n",
-            "Epoch 90/100 | LR=0.0000 | Train Loss=0.0001 | TestF1=0.9564 | BestF1=0.9671 | Temp=0.612\n",
-            "Epoch 95/100 | LR=0.0000 | Train Loss=0.0001 | TestF1=0.9557 | BestF1=0.9671 | Temp=0.528\n",
-            "Epoch 100/100 | LR=0.0000 | Train Loss=0.0000 | TestF1=0.9556 | BestF1=0.9671 | Temp=0.500\n",
+            "Epoch 05/100 | LR=0.0010 | Train Loss=0.1073 | TestF1=0.9187 | BestF1=0.9325 | Temp=4.982\n",
+            "Epoch 10/100 | LR=0.0010 | Train Loss=0.0853 | TestF1=0.9088 | BestF1=0.9361 | Temp=4.909\n",
+            "Epoch 15/100 | LR=0.0009 | Train Loss=0.0701 | TestF1=0.9241 | BestF1=0.9361 | Temp=4.782\n",
+            "Epoch 20/100 | LR=0.0009 | Train Loss=0.0278 | TestF1=0.9338 | BestF1=0.9382 | Temp=4.603\n",
+            "Epoch 25/100 | LR=0.0009 | Train Loss=0.0141 | TestF1=0.9471 | BestF1=0.9482 | Temp=4.378\n",
+            "Epoch 30/100 | LR=0.0008 | Train Loss=0.0060 | TestF1=0.9500 | BestF1=0.9547 | Temp=4.113\n",
+            "Epoch 35/100 | LR=0.0007 | Train Loss=0.0023 | TestF1=0.9436 | BestF1=0.9547 | Temp=3.813\n",
+            "Epoch 40/100 | LR=0.0007 | Train Loss=0.0016 | TestF1=0.9469 | BestF1=0.9547 | Temp=3.486\n",
+            "Epoch 45/100 | LR=0.0006 | Train Loss=0.0027 | TestF1=0.9524 | BestF1=0.9547 | Temp=3.141\n",
+            "Epoch 50/100 | LR=0.0005 | Train Loss=0.0002 | TestF1=0.9486 | BestF1=0.9547 | Temp=2.786\n",
+            "Epoch 55/100 | LR=0.0004 | Train Loss=0.0001 | TestF1=0.9455 | BestF1=0.9547 | Temp=2.430\n",
+            "Epoch 60/100 | LR=0.0004 | Train Loss=0.0001 | TestF1=0.9454 | BestF1=0.9547 | Temp=2.082\n",
+            "Epoch 65/100 | LR=0.0003 | Train Loss=0.0012 | TestF1=0.9440 | BestF1=0.9547 | Temp=1.751\n",
+            "Epoch 70/100 | LR=0.0002 | Train Loss=0.0001 | TestF1=0.9424 | BestF1=0.9547 | Temp=1.445\n",
+            "Epoch 75/100 | LR=0.0002 | Train Loss=0.0001 | TestF1=0.9437 | BestF1=0.9547 | Temp=1.172\n",
+            "Epoch 80/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9437 | BestF1=0.9547 | Temp=0.938\n",
+            "Epoch 85/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9435 | BestF1=0.9547 | Temp=0.750\n",
+            "Epoch 90/100 | LR=0.0000 | Train Loss=0.0001 | TestF1=0.9438 | BestF1=0.9547 | Temp=0.612\n",
+            "Epoch 95/100 | LR=0.0000 | Train Loss=0.0000 | TestF1=0.9438 | BestF1=0.9547 | Temp=0.528\n",
+            "Epoch 100/100 | LR=0.0000 | Train Loss=0.0000 | TestF1=0.9438 | BestF1=0.9547 | Temp=0.500\n",
             "\n",
-            "Best Test Macro-F1: 0.9671\n",
+            "Best Test Macro-F1: 0.9547\n",
             "\n",
             "====================================================\n",
             "[Robustness Results] UCI-HAR (Macro-F1)\n",
             "====================================================\n",
             "\n",
             "[Instant noise sweep]\n",
-            "  SNR= inf | Macro-F1=0.9671\n",
-            "  SNR=  30 | Macro-F1=0.9592\n",
-            "  SNR=  20 | Macro-F1=0.9127\n",
-            "  SNR=  10 | Macro-F1=0.7936\n",
-            "  SNR=   5 | Macro-F1=0.6590\n",
-            "  SNR=   0 | Macro-F1=0.5322\n",
+            "  SNR= inf | Macro-F1=0.9547\n",
+            "  SNR=  30 | Macro-F1=0.9543\n",
+            "  SNR=  20 | Macro-F1=0.9519\n",
+            "  SNR=  10 | Macro-F1=0.9446\n",
+            "  SNR=   5 | Macro-F1=0.9247\n",
+            "  SNR=   0 | Macro-F1=0.8984\n",
             "\n",
             "[LaTeX rows] Instant\n",
-            "inf & 0.9671 \\\\\n",
-            "30 & 0.9592 \\\\\n",
-            "20 & 0.9127 \\\\\n",
-            "10 & 0.7936 \\\\\n",
-            "5 & 0.6590 \\\\\n",
-            "0 & 0.5322 \\\\\n",
+            "inf & 0.9547 \\\\\n",
+            "30 & 0.9543 \\\\\n",
+            "20 & 0.9519 \\\\\n",
+            "10 & 0.9446 \\\\\n",
+            "5 & 0.9247 \\\\\n",
+            "0 & 0.8984 \\\\\n",
             "\n",
             "[Linear SNR drift]\n",
-            "  SNR=30.0 | Macro-F1=0.9592\n",
-            "  SNR=26.7 | Macro-F1=0.9505\n",
-            "  SNR=23.3 | Macro-F1=0.9286\n",
-            "  SNR=20.0 | Macro-F1=0.9127\n",
-            "  SNR=16.7 | Macro-F1=0.8937\n",
-            "  SNR=13.3 | Macro-F1=0.8576\n",
-            "  SNR=10.0 | Macro-F1=0.7936\n",
-            "  SNR= 6.7 | Macro-F1=0.6957\n",
-            "  SNR= 3.3 | Macro-F1=0.6201\n",
-            "  SNR= 0.0 | Macro-F1=0.5322\n",
+            "  SNR=30.0 | Macro-F1=0.9543\n",
+            "  SNR=26.7 | Macro-F1=0.9529\n",
+            "  SNR=23.3 | Macro-F1=0.9526\n",
+            "  SNR=20.0 | Macro-F1=0.9519\n",
+            "  SNR=16.7 | Macro-F1=0.9503\n",
+            "  SNR=13.3 | Macro-F1=0.9476\n",
+            "  SNR=10.0 | Macro-F1=0.9446\n",
+            "  SNR= 6.7 | Macro-F1=0.9337\n",
+            "  SNR= 3.3 | Macro-F1=0.9179\n",
+            "  SNR= 0.0 | Macro-F1=0.8984\n",
             "\n",
             "[LaTeX rows] Linear\n",
-            "30.0 & 0.9592 \\\\\n",
-            "26.7 & 0.9505 \\\\\n",
-            "23.3 & 0.9286 \\\\\n",
-            "20.0 & 0.9127 \\\\\n",
-            "16.7 & 0.8937 \\\\\n",
-            "13.3 & 0.8576 \\\\\n",
-            "10.0 & 0.7936 \\\\\n",
-            "6.7 & 0.6957 \\\\\n",
-            "3.3 & 0.6201 \\\\\n",
-            "0.0 & 0.5322 \\\\\n",
+            "30.0 & 0.9543 \\\\\n",
+            "26.7 & 0.9529 \\\\\n",
+            "23.3 & 0.9526 \\\\\n",
+            "20.0 & 0.9519 \\\\\n",
+            "16.7 & 0.9503 \\\\\n",
+            "13.3 & 0.9476 \\\\\n",
+            "10.0 & 0.9446 \\\\\n",
+            "6.7 & 0.9337 \\\\\n",
+            "3.3 & 0.9179 \\\\\n",
+            "0.0 & 0.8984 \\\\\n",
             "\n",
             "[Bias drift]\n",
-            "  beta=0.05 | Macro-F1=0.9492\n",
-            "  beta=0.10 | Macro-F1=0.8828\n",
-            "  beta=0.20 | Macro-F1=0.7580\n",
+            "  beta=0.05 | Macro-F1=0.9525\n",
+            "  beta=0.10 | Macro-F1=0.9459\n",
+            "  beta=0.20 | Macro-F1=0.9133\n",
             "\n",
             "[LaTeX rows] Bias\n",
-            "0.05 & 0.9492 \\\\\n",
-            "0.10 & 0.8828 \\\\\n",
-            "0.20 & 0.7580 \\\\\n"
+            "0.05 & 0.9525 \\\\\n",
+            "0.10 & 0.9459 \\\\\n",
+            "0.20 & 0.9133 \\\\\n"
           ]
         }
       ],
@@ -158,12 +158,14 @@
         "CLASS_NAMES = [\"WALK\", \"UP\", \"DOWN\", \"SIT\", \"STAND\", \"LAY\"]\n",
         "\n",
         "class UCIHARDataset(Dataset):\n",
-        "    def __init__(self, data_dir, split=\"train\"):\n",
+        "    def __init__(self, data_dir, split=\"train\", normalize=None):\n",
         "        self.data_dir = Path(data_dir)\n",
         "        self.split    = split\n",
         "        self.X, self.y = self._load_data()\n",
         "        self.X = torch.FloatTensor(self.X)\n",
         "        self.y = torch.LongTensor(self.y) - 1\n",
+        "\n",
+        "        self.normalize = normalize\n",
         "\n",
         "    def _load_data(self):\n",
         "        split_dir    = self.data_dir / self.split\n",
@@ -182,7 +184,13 @@
         "\n",
         "    def __len__(self):  return len(self.X)\n",
         "\n",
-        "    def __getitem__(self, idx): return self.X[idx], self.y[idx]\n",
+        "    def __getitem__(self, idx):\n",
+        "        X = self.X[idx]\n",
+        "        y = self.y[idx]\n",
+        "        if self.normalize is not None:\n",
+        "            mean, std = self.normalize\n",
+        "            X = (X - mean.squeeze(0)) / std.squeeze(0)\n",
+        "        return X, y\n",
         "\n",
         "\n",
         "# ──────────────────────────────────────────────────────────────────────────────\n",
@@ -392,6 +400,42 @@
         "        logits = self.classifier(self.global_pool(x).squeeze(-1))\n",
         "\n",
         "        return (logits, gate_info_list, total_compute) if return_gate_info else logits\n",
+        "\n",
+        "\n",
+        "@torch.no_grad()\n",
+        "def compute_train_stats(train_loader, device=\"cpu\", eps=1e-6):\n",
+        "    \"\"\"\n",
+        "    Returns:\n",
+        "      mean: (C,1) tensor\n",
+        "      std : (C,1) tensor\n",
+        "    Note:\n",
+        "      X shape from loader: (B,C,T)\n",
+        "      We compute stats over (B,T) for each channel.\n",
+        "    \"\"\"\n",
+        "    sum_x = None\n",
+        "    sum_x2 = None\n",
+        "    n = 0\n",
+        "\n",
+        "    for X, _ in train_loader:\n",
+        "        X = X.to(device)  # (B,C,T)\n",
+        "        B, C, T = X.shape\n",
+        "        if sum_x is None:\n",
+        "            sum_x = torch.zeros(C, device=device)\n",
+        "            sum_x2 = torch.zeros(C, device=device)\n",
+        "\n",
+        "        # sum over batch and time\n",
+        "        sum_x  += X.sum(dim=(0, 2))                 # (C,)\n",
+        "        sum_x2 += (X * X).sum(dim=(0, 2))           # (C,)\n",
+        "        n += B * T\n",
+        "\n",
+        "    mean = (sum_x / n)                              # (C,)\n",
+        "    var  = (sum_x2 / n) - mean * mean               # (C,)\n",
+        "    std  = torch.sqrt(torch.clamp(var, min=eps))    # (C,)\n",
+        "\n",
+        "    # reshape for broadcasting: (1,C,1) or (C,1)\n",
+        "    mean = mean.view(1, -1, 1)\n",
+        "    std  = std.view(1, -1, 1)\n",
+        "    return mean.detach().cpu(), std.detach().cpu()\n",
         "\n",
         "\n",
         "# ──────────────────────────────────────────────────────────────────────────────\n",
@@ -704,8 +748,19 @@
         "    LR = 1e-3\n",
         "    WD = 1e-2\n",
         "\n",
-        "    train_dataset = UCIHARDataset(DATA_PATH, split=\"train\")\n",
-        "    test_dataset = UCIHARDataset(DATA_PATH, split=\"test\")\n",
+        "    train_dataset_raw = UCIHARDataset(DATA_PATH, split=\"train\", normalize=None)\n",
+        "\n",
+        "    stats_loader = DataLoader(\n",
+        "        train_dataset_raw,\n",
+        "        batch_size=BATCH_SIZE,\n",
+        "        shuffle=False,\n",
+        "        num_workers=NUM_WORKERS,\n",
+        "        pin_memory=PIN_MEMORY\n",
+        "    )\n",
+        "\n",
+        "    mean, std = compute_train_stats(stats_loader, device=\"cpu\")\n",
+        "    train_dataset = UCIHARDataset(DATA_PATH, split=\"train\", normalize=(mean, std))\n",
+        "    test_dataset  = UCIHARDataset(DATA_PATH, split=\"test\",  normalize=(mean, std))\n",
         "\n",
         "    train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
         "                              num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY)\n",
