--- a/Adaptive_PADRe_BASE_0222.ipynb
+++ b/Adaptive_PADRe_BASE_0222.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "377P8888sxdW",
-        "outputId": "3e620ab1-e3b4-4995-9133-2fdef6402882"
+        "outputId": "c229abff-aa26-49e9-e319-3f3872261721"
       },
       "outputs": [
         {
@@ -44,28 +44,28 @@
             "\n",
             "Model params: 78,591\n",
             "\n",
-            "Epoch 05/100 | LR=0.0010 | Train Loss=0.1304 | TestF1=0.8834 | BestF1=0.9128 | Temp=4.982\n",
-            "Epoch 10/100 | LR=0.0010 | Train Loss=0.1088 | TestF1=0.9017 | BestF1=0.9182 | Temp=4.909\n",
-            "Epoch 15/100 | LR=0.0009 | Train Loss=0.0615 | TestF1=0.9339 | BestF1=0.9417 | Temp=4.782\n",
-            "Epoch 20/100 | LR=0.0009 | Train Loss=0.0301 | TestF1=0.9486 | BestF1=0.9486 | Temp=4.603\n",
-            "Epoch 25/100 | LR=0.0009 | Train Loss=0.0202 | TestF1=0.9448 | BestF1=0.9543 | Temp=4.378\n",
-            "Epoch 30/100 | LR=0.0008 | Train Loss=0.0159 | TestF1=0.9544 | BestF1=0.9544 | Temp=4.113\n",
-            "Epoch 35/100 | LR=0.0007 | Train Loss=0.0105 | TestF1=0.9514 | BestF1=0.9555 | Temp=3.813\n",
-            "Epoch 40/100 | LR=0.0007 | Train Loss=0.0058 | TestF1=0.9471 | BestF1=0.9555 | Temp=3.486\n",
-            "Epoch 45/100 | LR=0.0006 | Train Loss=0.0015 | TestF1=0.9588 | BestF1=0.9588 | Temp=3.141\n",
-            "Epoch 50/100 | LR=0.0005 | Train Loss=0.0041 | TestF1=0.9602 | BestF1=0.9605 | Temp=2.786\n",
-            "Epoch 55/100 | LR=0.0004 | Train Loss=0.0030 | TestF1=0.9599 | BestF1=0.9671 | Temp=2.430\n",
-            "Epoch 60/100 | LR=0.0004 | Train Loss=0.0003 | TestF1=0.9563 | BestF1=0.9671 | Temp=2.082\n",
-            "Epoch 65/100 | LR=0.0003 | Train Loss=0.0003 | TestF1=0.9536 | BestF1=0.9671 | Temp=1.751\n",
-            "Epoch 70/100 | LR=0.0002 | Train Loss=0.0014 | TestF1=0.9559 | BestF1=0.9671 | Temp=1.445\n",
-            "Epoch 75/100 | LR=0.0002 | Train Loss=0.0002 | TestF1=0.9590 | BestF1=0.9671 | Temp=1.172\n",
-            "Epoch 80/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9564 | BestF1=0.9671 | Temp=0.938\n",
-            "Epoch 85/100 | LR=0.0001 | Train Loss=0.0001 | TestF1=0.9563 | BestF1=0.9671 | Temp=0.750\n",
-            "Epoch 90/100 | LR=0.0000 | Train Loss=0.0001 | TestF1=0.9564 | BestF1=0.9671 | Temp=0.612\n",
-            "Epoch 95/100 | LR=0.0000 | Train Loss=0.0001 | TestF1=0.9557 | BestF1=0.9671 | Temp=0.528\n",
-            "Epoch 100/100 | LR=0.0000 | Train Loss=0.0000 | TestF1=0.9556 | BestF1=0.9671 | Temp=0.500\n",
+            "Epoch 05/100 | LR=0.0020 | Train Loss=0.1880 | TestF1=0.9301 | BestF1=0.9301 | Temp=4.982\n",
+            "Epoch 10/100 | LR=0.0020 | Train Loss=0.1557 | TestF1=0.9303 | BestF1=0.9376 | Temp=4.909\n",
+            "Epoch 15/100 | LR=0.0019 | Train Loss=0.1084 | TestF1=0.9470 | BestF1=0.9524 | Temp=4.782\n",
+            "Epoch 20/100 | LR=0.0018 | Train Loss=0.0860 | TestF1=0.9525 | BestF1=0.9616 | Temp=4.603\n",
+            "Epoch 25/100 | LR=0.0017 | Train Loss=0.0868 | TestF1=0.9568 | BestF1=0.9616 | Temp=4.378\n",
+            "Epoch 30/100 | LR=0.0016 | Train Loss=0.0766 | TestF1=0.9611 | BestF1=0.9641 | Temp=4.113\n",
+            "Epoch 35/100 | LR=0.0015 | Train Loss=0.0696 | TestF1=0.9512 | BestF1=0.9641 | Temp=3.813\n",
+            "Epoch 40/100 | LR=0.0013 | Train Loss=0.0708 | TestF1=0.9561 | BestF1=0.9641 | Temp=3.486\n",
+            "Epoch 45/100 | LR=0.0012 | Train Loss=0.0688 | TestF1=0.9605 | BestF1=0.9641 | Temp=3.141\n",
+            "Epoch 50/100 | LR=0.0010 | Train Loss=0.0678 | TestF1=0.9630 | BestF1=0.9641 | Temp=2.786\n",
+            "Epoch 55/100 | LR=0.0008 | Train Loss=0.0678 | TestF1=0.9638 | BestF1=0.9642 | Temp=2.430\n",
+            "Epoch 60/100 | LR=0.0007 | Train Loss=0.0675 | TestF1=0.9594 | BestF1=0.9642 | Temp=2.082\n",
+            "Epoch 65/100 | LR=0.0006 | Train Loss=0.0676 | TestF1=0.9608 | BestF1=0.9642 | Temp=1.751\n",
+            "Epoch 70/100 | LR=0.0004 | Train Loss=0.0676 | TestF1=0.9614 | BestF1=0.9642 | Temp=1.445\n",
+            "Epoch 75/100 | LR=0.0003 | Train Loss=0.0677 | TestF1=0.9607 | BestF1=0.9642 | Temp=1.172\n",
+            "Epoch 80/100 | LR=0.0002 | Train Loss=0.0674 | TestF1=0.9590 | BestF1=0.9642 | Temp=0.938\n",
+            "Epoch 85/100 | LR=0.0001 | Train Loss=0.0673 | TestF1=0.9597 | BestF1=0.9642 | Temp=0.750\n",
+            "Epoch 90/100 | LR=0.0001 | Train Loss=0.0673 | TestF1=0.9594 | BestF1=0.9642 | Temp=0.612\n",
+            "Epoch 95/100 | LR=0.0000 | Train Loss=0.0673 | TestF1=0.9594 | BestF1=0.9642 | Temp=0.528\n",
+            "Epoch 100/100 | LR=0.0000 | Train Loss=0.0675 | TestF1=0.9590 | BestF1=0.9642 | Temp=0.500\n",
             "\n",
-            "Best Test Macro-F1: 0.9671\n"
+            "Best Test Macro-F1: 0.9642\n"
           ]
         }
       ],
@@ -104,12 +104,14 @@
         "CLASS_NAMES = [\"WALK\", \"UP\", \"DOWN\", \"SIT\", \"STAND\", \"LAY\"]\n",
         "\n",
         "class UCIHARDataset(Dataset):\n",
-        "    def __init__(self, data_dir, split=\"train\"):\n",
+        "    def __init__(self, data_dir, split=\"train\", normalize=None):\n",
         "        self.data_dir = Path(data_dir)\n",
         "        self.split    = split\n",
         "        self.X, self.y = self._load_data()\n",
         "        self.X = torch.FloatTensor(self.X)\n",
         "        self.y = torch.LongTensor(self.y) - 1\n",
+        "\n",
+        "        self.normalize = normalize\n",
         "\n",
         "    def _load_data(self):\n",
         "        split_dir    = self.data_dir / self.split\n",
@@ -128,7 +130,13 @@
         "\n",
         "    def __len__(self):  return len(self.X)\n",
         "\n",
-        "    def __getitem__(self, idx): return self.X[idx], self.y[idx]\n",
+        "    def __getitem__(self, idx):\n",
+        "        X = self.X[idx]\n",
+        "        y = self.y[idx]\n",
+        "        if self.normalize is not None:\n",
+        "            mean, std = self.normalize\n",
+        "            X = (X - mean.squeeze(0)) / std.squeeze(0)\n",
+        "        return X, y\n",
         "\n",
         "\n",
         "# ──────────────────────────────────────────────────────────────────────────────\n",
@@ -350,6 +358,41 @@
         "def count_parameters(model):\n",
         "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "\n",
+        "@torch.no_grad()\n",
+        "def compute_train_stats(train_loader, device=\"cpu\", eps=1e-6):\n",
+        "    \"\"\"\n",
+        "    Returns:\n",
+        "      mean: (C,1) tensor\n",
+        "      std : (C,1) tensor\n",
+        "    Note:\n",
+        "      X shape from loader: (B,C,T)\n",
+        "      We compute stats over (B,T) for each channel.\n",
+        "    \"\"\"\n",
+        "    sum_x = None\n",
+        "    sum_x2 = None\n",
+        "    n = 0\n",
+        "\n",
+        "    for X, _ in train_loader:\n",
+        "        X = X.to(device)  # (B,C,T)\n",
+        "        B, C, T = X.shape\n",
+        "        if sum_x is None:\n",
+        "            sum_x = torch.zeros(C, device=device)\n",
+        "            sum_x2 = torch.zeros(C, device=device)\n",
+        "\n",
+        "        # sum over batch and time\n",
+        "        sum_x  += X.sum(dim=(0, 2))                 # (C,)\n",
+        "        sum_x2 += (X * X).sum(dim=(0, 2))           # (C,)\n",
+        "        n += B * T\n",
+        "\n",
+        "    mean = (sum_x / n)                              # (C,)\n",
+        "    var  = (sum_x2 / n) - mean * mean               # (C,)\n",
+        "    std  = torch.sqrt(torch.clamp(var, min=eps))    # (C,)\n",
+        "\n",
+        "    # reshape for broadcasting: (1,C,1) or (C,1)\n",
+        "    mean = mean.view(1, -1, 1)\n",
+        "    std  = std.view(1, -1, 1)\n",
+        "    return mean.detach().cpu(), std.detach().cpu()\n",
+        "\n",
         "\n",
         "# ──────────────────────────────────────────────────────────────────────────────\n",
         "# Train & Eval\n",
@@ -424,19 +467,30 @@
         "    NUM_WORKERS = 2 if USE_GPU else 0\n",
         "    PIN_MEMORY = USE_GPU\n",
         "\n",
-        "    BATCH_SIZE = 64\n",
+        "    BATCH_SIZE = 128\n",
         "    EPOCHS = 100\n",
         "    NUM_CLASSES = 6\n",
         "    HIDDEN_DIM = 48\n",
         "    NUM_LAYERS = 3\n",
         "    MAX_DEGREE = 3\n",
         "    GATE_HIDDEN_DIM = 16\n",
-        "    DROPOUT = 0.25\n",
-        "    LR = 1e-3\n",
+        "    DROPOUT = 0.3\n",
+        "    LR = 2e-3\n",
         "    WD = 1e-2\n",
         "\n",
-        "    train_dataset = UCIHARDataset(DATA_PATH, split=\"train\")\n",
-        "    test_dataset = UCIHARDataset(DATA_PATH, split=\"test\")\n",
+        "    train_dataset_raw = UCIHARDataset(DATA_PATH, split=\"train\", normalize=None)\n",
+        "\n",
+        "    stats_loader = DataLoader(\n",
+        "        train_dataset_raw,\n",
+        "        batch_size=BATCH_SIZE,\n",
+        "        shuffle=False,\n",
+        "        num_workers=NUM_WORKERS,\n",
+        "        pin_memory=False\n",
+        "    )\n",
+        "\n",
+        "    mean, std = compute_train_stats(stats_loader, device=DEVICE if USE_GPU else \"cpu\")\n",
+        "    train_dataset = UCIHARDataset(DATA_PATH, split=\"train\", normalize=(mean, std))\n",
+        "    test_dataset  = UCIHARDataset(DATA_PATH, split=\"test\",  normalize=(mean, std))\n",
         "\n",
         "    train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
         "                              num_workers=NUM_WORKERS, pin_memory=PIN_MEMORY)\n",
