--- a/Adaptive_PADRe_BASE_0222.ipynb
+++ b/Adaptive_PADRe_BASE_0222.ipynb
@@ -409,7 +409,7 @@
         "    set_seed(seed)\n",
         "    optimizer = torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
         "    scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=epochs, eta_min=1e-5)\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
+        "    criterion = nn.CrossEntropyLoss(label_smoothing=0.01)\n",
         "\n",
         "    best_f1 = -1.0\n",
         "    best_state = None\n",
